--- a/Common/Resources/SfResources.ar.resx
+++ b/Common/Resources/SfResources.ar.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!--
     Microsoft ResX Schema
@@ -1101,6 +1101,12 @@
   <data name="FileManager_ServerError" xml:space="preserve">
     <value>ServerError: استجابة غير صالحة من</value>
   </data>
+  <data name="FileManager_File" xml:space="preserve">
+    <value>ملف</value>
+  </data>
+  <data name="FileManager_Folder" xml:space="preserve">
+    <value>مجلد</value>
+  </data>
   <data name="DiagramComponent_X" xml:space="preserve">
     <value>X</value>
   </data>
@@ -1931,6 +1937,12 @@
   </data>
   <data name="Schedule_Year" xml:space="preserve">
     <value>سنة</value>
+  </data>
+  <data name="Schedule_YearLabel" xml:space="preserve">
+    <value>نظرة عامة توضح جميع أيام السنة</value>
+  </data>
+  <data name="Schedule_MoreEventPopupLabel" xml:space="preserve">
+    <value>جميع الأحداث من {0} في طريقة عرض منبثقة</value>
   </data>
   <data name="Tab_CloseButtonTitle" xml:space="preserve">
     <value>قريب</value>
@@ -3752,6 +3764,15 @@
   </data>
   <data name="RichTextEditor_Default" xml:space="preserve">
     <value>افتراضي</value>
+  </data>
+  <data name="RichTextEditor_Checklist" xml:space="preserve">
+    <value>قائمة المراجعة</value>
+  </data>
+  <data name="RichTextEditor_SlashMenuCheckList" xml:space="preserve">
+    <value>قائمة المراجعة</value>
+  </data>
+  <data name="RichTextEditor_SlashMenuChecklistDescription" xml:space="preserve">
+    <value>إضافة قائمة التحقق</value>
   </data>
   <data name="PdfViewer" xml:space="preserve">
     <value>PDF  عارض</value>
@@ -9056,5 +9077,23 @@
   </data>
   <data name="BlockEditor_CodeCopyTooltip" xml:space="preserve">
     <value>نسخ الكود</value>
+  </data>
+  <data name="DocumentEditorContainer_CommentsCloseHeader" xml:space="preserve">
+    <value>التعليقات غير المحفوظة</value>
+  </data>
+  <data name="DocumentEditorContainer_CommentsCloseContent" xml:space="preserve">
+    <value>لديك تعليقات لم يتم نشرها بعد. إذا تركت هذه الصفحة، فسيتم التخلص منها</value>
+  </data>
+  <data name="DocumentEditorContainer_KeepEditing" xml:space="preserve">
+    <value>استمر في التحرير</value>
+  </data>
+  <data name="DocumentEditorContainer_DiscardComments" xml:space="preserve">
+    <value>تجاهل التعليقات</value>
+  </data>
+  <data name="DocumentEditor_Resolved" xml:space="preserve">
+    <value>تم الحل</value>
+  </data>
+  <data name="DocumentEditor_ClickToSeeThisComment" xml:space="preserve">
+    <value>انقر لرؤية هذا التعليق</value>
   </data>
 </root>
