--- a/Common/Resources/SfResources.zh-CN.resx
+++ b/Common/Resources/SfResources.zh-CN.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!--
     Microsoft ResX Schema
@@ -729,6 +729,12 @@
   <data name="FileManager_ServerError" xml:space="preserve">
     <value>ServerError：来自的无效响应</value>
   </data>
+  <data name="FileManager_File" xml:space="preserve">
+    <value>文件</value>
+  </data>
+  <data name="FileManager_Folder" xml:space="preserve">
+    <value>文件夹</value>
+  </data>  
   <data name="Slider_DecrementTitle" xml:space="preserve">
     <value>减少</value>
   </data>
@@ -1952,6 +1958,12 @@
   </data>
   <data name="Schedule_Year" xml:space="preserve">
     <value>年</value>
+  </data>
+  <data name="Schedule_YearLabel" xml:space="preserve">
+    <value>一年中所有日期的概览</value>
+  </data>
+  <data name="Schedule_MoreEventPopupLabel" xml:space="preserve">
+    <value>弹出视图中的来自 {0} 的所有事件</value>
   </data>
   <data name="PivotView_NumberFormat_ExampleWatermark" xml:space="preserve">
     <value>示例：C、P、0000 %、###0.##0# 等。</value>
@@ -3746,6 +3758,15 @@
   </data>
   <data name="RichTextEditor_Default" xml:space="preserve">
     <value>Default</value>
+  </data>
+  <data name="RichTextEditor_Checklist" xml:space="preserve">
+    <value>檢查清單</value>
+  </data>
+  <data name="RichTextEditor_SlashMenuCheckList" xml:space="preserve">
+    <value>檢查清單</value>
+  </data>
+  <data name="RichTextEditor_SlashMenuChecklistDescription" xml:space="preserve">
+    <value>添加检查清单</value>
   </data>
   <data name="PdfViewer" xml:space="preserve">
     <value>PDF查看器</value>
@@ -9050,5 +9071,23 @@
   </data>
   <data name="BlockEditor_CodeCopyTooltip" xml:space="preserve">
       <value>复制代码</value>
+  </data>
+  <data name="DocumentEditorContainer_CommentsCloseHeader" xml:space="preserve">
+    <value>未保存的评论</value>
+  </data>
+  <data name="DocumentEditorContainer_CommentsCloseContent" xml:space="preserve">
+    <value>您还有尚未发布的评论。如果您离开此页面，它们将被丢弃</value>
+  </data>
+  <data name="DocumentEditorContainer_KeepEditing" xml:space="preserve">
+    <value>继续编辑</value>
+  </data>
+  <data name="DocumentEditorContainer_DiscardComments" xml:space="preserve">
+    <value>丢弃评论</value>
+  </data>
+  <data name="DocumentEditor_Resolved" xml:space="preserve">
+    <value>已解决</value>
+  </data>
+  <data name="DocumentEditor_ClickToSeeThisComment" xml:space="preserve">
+    <value>点击查看这条评论</value>
   </data>
 </root>
